--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,10 +71,10 @@ target_link_libraries(fib-seq m)
 add_executable(fib-seq2 benchmarks/fib/fib-seq2.c)
 target_link_libraries(fib-seq2 m)
 
-add_executable(fib-lace benchmarks/fib/fib-lace.c lace-1.c lace-1.h ${numa_tools})
-set_target_properties(fib-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(fib-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(fib-lace pthread m ${NUMA_LIB})
+add_executable(fib-lace-ri benchmarks/fib/fib-lace.c lace-1.c lace-1.h ${numa_tools})
+set_target_properties(fib-lace-ri PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(fib-lace-ri PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(fib-lace-ri pthread m ${NUMA_LIB})
 
 # add_executable(fib-lace-prof benchmarks/fib/fib-lace.c lace-1.c lace-1.h ${numa_tools})
 # set_target_properties(fib-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
@@ -85,25 +85,25 @@ add_executable(uts-seq ${uts_sources} benchmarks/uts/uts-seq.c)
 set_target_properties(uts-seq PROPERTIES COMPILE_DEFINITIONS "BRG_C99_TYPES;BRG_RNG")
 target_link_libraries(uts-seq m)
 
-add_executable(uts2-lace ${uts_sources} benchmarks/uts/uts2-lace.c lace-2.c lace-2.h ${numa_tools})
-set_target_properties(uts2-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(uts2-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
-target_link_libraries(uts2-lace m pthread ${NUMA_LIB})
+add_executable(uts2-lace-ri ${uts_sources} benchmarks/uts/uts2-lace.c lace-2.c lace-2.h ${numa_tools})
+set_target_properties(uts2-lace-ri PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(uts2-lace-ri PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
+target_link_libraries(uts2-lace-ri m pthread ${NUMA_LIB})
 
-add_executable(uts-lace ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h ${numa_tools})
-set_target_properties(uts-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(uts-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
-target_link_libraries(uts-lace m pthread ${NUMA_LIB})
+add_executable(uts-lace-ri  ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h ${numa_tools})
+set_target_properties(uts-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(uts-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
+target_link_libraries(uts-lace-ri  m pthread ${NUMA_LIB})
 
 # add_executable(uts-lace-prof ${uts_sources} benchmarks/uts/uts-lace.c lace-2.c lace-2.h ${numa_tools})
 # set_target_properties(uts-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 # set_target_properties(uts-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags};BRG_C99_TYPES;BRG_RNG")
 # target_link_libraries(uts-lace-prof m pthread profiler ${NUMA_LIB})
 
-add_executable(queens-lace benchmarks/queens/queens-lace.c lace-3.c lace-3.h ${numa_tools})
-set_target_properties(queens-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(queens-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(queens-lace pthread m ${NUMA_LIB})
+add_executable(queens-lace-ri  benchmarks/queens/queens-lace.c lace-3.c lace-3.h ${numa_tools})
+set_target_properties(queens-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(queens-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(queens-lace-ri  pthread m ${NUMA_LIB})
 
 # add_executable(queens-lace-prof benchmarks/queens/queens-lace.c lace-3.c lace-3.h ${numa_tools})
 # set_target_properties(queens-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
@@ -113,10 +113,10 @@ target_link_libraries(queens-lace pthread m ${NUMA_LIB})
 add_executable(queens-seq benchmarks/queens/queens-seq.c)
 target_link_libraries(queens-seq m)
 
-add_executable(matmul-lace benchmarks/matmul/matmul-lace.c lace-8.c lace-8.h ${numa_tools})
-set_target_properties(matmul-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(matmul-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(matmul-lace pthread m ${NUMA_LIB})
+add_executable(matmul-lace-ri  benchmarks/matmul/matmul-lace.c lace-8.c lace-8.h ${numa_tools})
+set_target_properties(matmul-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(matmul-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(matmul-lace-ri  pthread m ${NUMA_LIB})
 
 add_executable(matmul-seq benchmarks/matmul/matmul-seq.c)
 target_link_libraries(matmul-seq m)
@@ -126,25 +126,25 @@ target_link_libraries(matmul-seq m)
 #set_target_properties(matmul-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 #target_link_libraries(matmul-lace-prof pthread m profiler ${NUMA_LIB})
 
-add_executable(knapsack-lace benchmarks/knapsack/knapsack-lace.c lace-4.c lace-4.h ${numa_tools})
-set_target_properties(knapsack-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(knapsack-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(knapsack-lace pthread m ${NUMA_LIB})
+add_executable(knapsack-lace-ri  benchmarks/knapsack/knapsack-lace.c lace-4.c lace-4.h ${numa_tools})
+set_target_properties(knapsack-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(knapsack-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(knapsack-lace-ri  pthread m ${NUMA_LIB})
 
-add_executable(strassen-lace benchmarks/strassen/strassen-lace.c lace-7.c lace-7.h ${numa_tools})
-set_target_properties(strassen-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(strassen-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(strassen-lace pthread m ${NUMA_LIB})
+add_executable(strassen-lace-ri  benchmarks/strassen/strassen-lace.c lace-7.c lace-7.h ${numa_tools})
+set_target_properties(strassen-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(strassen-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(strassen-lace-ri  pthread m ${NUMA_LIB})
 
 #add_executable(strassen-lace-prof benchmarks/strassen/strassen-lace.c lace-7.c lace-7.h ${numa_tools})
 #set_target_properties(strassen-lace-prof PROPERTIES COMPILE_FLAGS "-I. -g -fno-inline")
 #set_target_properties(strassen-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 #target_link_libraries(strassen-lace-prof pthread m profiler  ${NUMA_LIB})
 
-add_executable(cilksort-lace benchmarks/cilksort/cilksort-lace.c lace-5.c lace-5.h ${numa_tools})
-set_target_properties(cilksort-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(cilksort-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(cilksort-lace pthread m ${NUMA_LIB})
+add_executable(cilksort-lace-ri  benchmarks/cilksort/cilksort-lace.c lace-5.c lace-5.h ${numa_tools})
+set_target_properties(cilksort-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(cilksort-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(cilksort-lace-ri  pthread m ${NUMA_LIB})
 
 add_executable(cilksort-seq benchmarks/cilksort/cilksort-seq.c)
 target_link_libraries(cilksort-seq m)
@@ -154,10 +154,10 @@ target_link_libraries(cilksort-seq m)
 #set_target_properties(cilksort-lace-prof PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
 #target_link_libraries(cilksort-lace-prof pthread m profiler ${NUMA_LIB})
 
-add_executable(dfs-lace benchmarks/dfs/dfs-lace.c lace-1.c lace-1.h ${numa_tools})
-set_target_properties(dfs-lace PROPERTIES COMPILE_FLAGS "-I.")
-set_target_properties(dfs-lace PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
-target_link_libraries(dfs-lace pthread m ${NUMA_LIB})
+add_executable(dfs-lace-ri  benchmarks/dfs/dfs-lace.c lace-1.c lace-1.h ${numa_tools})
+set_target_properties(dfs-lace-ri  PROPERTIES COMPILE_FLAGS "-I.")
+set_target_properties(dfs-lace-ri  PROPERTIES COMPILE_DEFINITIONS "${lace_flags}")
+target_link_libraries(dfs-lace-ri  pthread m ${NUMA_LIB})
 
 add_executable(dfs-seq benchmarks/dfs/dfs-seq.c)
 target_link_libraries(dfs-seq m)
