--- a/lace.h.in
+++ b/lace.h.in
@@ -1,10 +1,4 @@
-#! /bin/bash
-
-# Minimum number of task parameters: 2
-if [ "$1" -le 1 ] ; then k=2; else k=$1; fi
-
-# Copyright notice:
-echo "/* 
+/* 
  * Copyright 2013-2014 Formal Methods and Tools, University of Twente
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,10 +12,9 @@ echo "/*
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */"
-
-echo '
-#include <unistd.h>
+ */
+ 
+ #include <unistd.h>
 #include <stdint.h>
 #include <stdio.h>
 #include <atomics.h>
@@ -74,7 +67,7 @@ extern "C" {
    The value must be greater than or equal to the maximum size of your tasks.
    The task size is the maximum of the size of the result or of the sum of the parameter sizes. */
 #ifndef LACE_TASKSIZE
-#define LACE_TASKSIZE ('$k')*P_SZ
+#define LACE_TASKSIZE (@LACE_TASKPARAMETER@)*P_SZ
 #endif
 
 #if LACE_PIE_TIMES
@@ -569,227 +562,4 @@ void lace_drop(WorkerP *w, Task *__dq_head)
     lace_drop_slow(w, __dq_head);
 }
 
-'
-#
-# Create macros for each arity
-#
-
-for(( r = 0; r <= $k; r++ )) do
-
-# Extend various argument lists
-if ((r)); then
-  MACRO_ARGS="$MACRO_ARGS, ATYPE_$r, ARG_$r"
-  DECL_ARGS="$DECL_ARGS, ATYPE_$r"
-  TASK_FIELDS="$TASK_FIELDS ATYPE_$r arg_$r;"
-  TASK_INIT="$TASK_INIT t->d.args.arg_$r = arg_$r;"
-  TASK_GET_FROM_t="$TASK_GET_FROM_t, t->d.args.arg_$r"
-  CALL_ARGS="$CALL_ARGS, arg_$r"
-  FUN_ARGS="$FUN_ARGS, ATYPE_$r arg_$r"
-  WORK_ARGS="$WORK_ARGS, ATYPE_$r ARG_$r"
-fi
-
-echo
-echo "// Task macros for tasks of arity $r"
-echo
-
-# Create a void and a non-void version
-for isvoid in 0 1; do
-if (( isvoid==0 )); then
-  DEF_MACRO="#define TASK_$r(RTYPE, NAME$MACRO_ARGS) \
-             TASK_DECL_$r(RTYPE, NAME$DECL_ARGS) TASK_IMPL_$r(RTYPE, NAME$MACRO_ARGS)"
-  DECL_MACRO="#define TASK_DECL_$r(RTYPE, NAME$DECL_ARGS)"
-  IMPL_MACRO="#define TASK_IMPL_$r(RTYPE, NAME$MACRO_ARGS)"
-  RTYPE="RTYPE"
-  RES_FIELD="$RTYPE res;"
-  SAVE_RVAL="t->d.res ="
-  RETURN_RES="((TD_##NAME *)t)->d.res"
-else
-  DEF_MACRO="#define VOID_TASK_$r(NAME$MACRO_ARGS) \
-             VOID_TASK_DECL_$r(NAME$DECL_ARGS) VOID_TASK_IMPL_$r(NAME$MACRO_ARGS)"
-  DECL_MACRO="#define VOID_TASK_DECL_$r(NAME$DECL_ARGS)"
-  IMPL_MACRO="#define VOID_TASK_IMPL_$r(NAME$MACRO_ARGS)"
-  RTYPE="void"
-  RES_FIELD=""
-  SAVE_RVAL=""
-  RETURN_RES=""
-fi
-
-# Write down the macro for the task declaration
-(\
-echo "$DECL_MACRO
-
-typedef struct _TD_##NAME {
-  TASK_COMMON_FIELDS(_TD_##NAME)
-  union {
-    struct { $TASK_FIELDS } args;
-    $RES_FIELD
-  } d;
-} TD_##NAME;
-
-/* If this line generates an error, please manually set the define LACE_TASKSIZE to a higher value */
-typedef char assertion_failed_task_descriptor_out_of_bounds_##NAME[(sizeof(TD_##NAME)<=sizeof(Task)) ? 0 : -1];
-
-void NAME##_WRAP(WorkerP *, Task *, TD_##NAME *);
-$RTYPE NAME##_CALL(WorkerP *, Task * $FUN_ARGS);
-static inline $RTYPE NAME##_SYNC(WorkerP *, Task *);
-static $RTYPE NAME##_SYNC_SLOW(WorkerP *, Task *);
-
-static inline __attribute__((unused))
-void NAME##_SPAWN(WorkerP *w, Task *__dq_head $FUN_ARGS)
-{
-    PR_COUNTTASK(w);
-
-    TD_##NAME *t;
-    TailSplit ts;
-    uint32_t head, split, newsplit;
-
-    /* assert(__dq_head < w->end); */ /* Assuming to be true */
-
-    t = (TD_##NAME *)__dq_head;
-    t->f = &NAME##_WRAP;
-    t->thief = THIEF_TASK;
-    $TASK_INIT
-    compiler_barrier();
-
-    Worker *wt = w->_public;
-    if (unlikely(w->allstolen)) {
-        if (wt->movesplit) wt->movesplit = 0;
-        head = __dq_head - w->dq;
-        ts = (TailSplit){{head,head+1}};
-        wt->ts.v = ts.v;
-        compiler_barrier();
-        wt->allstolen = 0;
-        w->split = __dq_head+1;
-        w->allstolen = 0;
-    } else if (unlikely(wt->movesplit)) {
-        head = __dq_head - w->dq;
-        split = w->split - w->dq;
-        newsplit = (split + head + 2)/2;
-        wt->ts.ts.split = newsplit;
-        w->split = w->dq + newsplit;
-        compiler_barrier();
-        wt->movesplit = 0;
-        PR_COUNTSPLITS(w, CTR_split_grow);
-    }
-}
-
-static inline __attribute__((unused))
-$RTYPE NAME##_NEWFRAME(WorkerP *w, Task *__dq_head $FUN_ARGS)
-{
-    Task _t;
-    TD_##NAME *t = (TD_##NAME *)&_t;
-    t->f = &NAME##_WRAP;
-    t->thief = THIEF_TASK;
-    $TASK_INIT
-
-    lace_do_newframe(w, __dq_head, &_t);
-    return $RETURN_RES;
-}
-
-static inline __attribute__((unused))
-void NAME##_TOGETHER(WorkerP *w, Task *__dq_head $FUN_ARGS)
-{
-    Task _t;
-    TD_##NAME *t = (TD_##NAME *)&_t;
-    t->f = &NAME##_WRAP;
-    t->thief = THIEF_TASK;
-    $TASK_INIT
-
-    lace_do_together(w, __dq_head, &_t);
-}
-
-static __attribute__((noinline))
-$RTYPE NAME##_SYNC_SLOW(WorkerP *w, Task *__dq_head)
-{
-    TD_##NAME *t;
-
-    if ((w->allstolen) || (w->split > __dq_head && lace_shrink_shared(w))) {
-        lace_leapfrog(w, __dq_head);
-        t = (TD_##NAME *)__dq_head;
-        return $RETURN_RES;
-    }
-
-    compiler_barrier();
-
-    Worker *wt = w->_public;
-    if (wt->movesplit) {
-        Task *t = w->split;
-        size_t diff = __dq_head - t;
-        diff = (diff + 1) / 2;
-        w->split = t + diff;
-        wt->ts.ts.split += diff;
-        compiler_barrier();
-        wt->movesplit = 0;
-        PR_COUNTSPLITS(w, CTR_split_grow);
-    }
-
-    compiler_barrier();
-
-    t = (TD_##NAME *)__dq_head;
-    t->thief = THIEF_EMPTY;
-    return NAME##_CALL(w, __dq_head $TASK_GET_FROM_t);
-}
-
-static inline __attribute__((unused))
-$RTYPE NAME##_SYNC(WorkerP *w, Task *__dq_head)
-{
-    /* assert (__dq_head > 0); */  /* Commented out because we assume contract */
-
-    if (likely(0 == w->_public->movesplit)) {
-        if (likely(w->split <= __dq_head)) {
-            TD_##NAME *t = (TD_##NAME *)__dq_head;
-            t->thief = THIEF_EMPTY;
-            return NAME##_CALL(w, __dq_head $TASK_GET_FROM_t);
-        }
-    }
-
-    return NAME##_SYNC_SLOW(w, __dq_head);
-}
-
-"\
-) | awk '{printf "%-86s\\\n", $0 }'
-
-echo ""
-
-(\
-echo "$IMPL_MACRO
-void NAME##_WRAP(WorkerP *w, Task *__dq_head, TD_##NAME *t __attribute__((unused)))
-{
-    $SAVE_RVAL NAME##_CALL(w, __dq_head $TASK_GET_FROM_t);
-}
-
-static inline __attribute__((always_inline))
-$RTYPE NAME##_WORK(WorkerP *__lace_worker, Task *__lace_dq_head $DECL_ARGS);
-
-/* NAME##_WORK is inlined in NAME##_CALL and the parameter __lace_in_task will disappear */
-$RTYPE NAME##_CALL(WorkerP *w, Task *__dq_head $FUN_ARGS)
-{
-    CHECKSTACK(w);
-    return NAME##_WORK(w, __dq_head $CALL_ARGS);
-}
-
-static inline __attribute__((always_inline))
-$RTYPE NAME##_WORK(WorkerP *__lace_worker __attribute__((unused)), Task *__lace_dq_head __attribute__((unused)) $WORK_ARGS)" \
-) | awk '{printf "%-86s\\\n", $0 }'
-
-echo ""
-
-echo $DEF_MACRO
-
-echo ""
-
-done
-
-done
-
-echo "
-VOID_TASK_DECL_0(lace_steal_random);
-VOID_TASK_DECL_1(lace_steal_random_loop, int*);
-VOID_TASK_DECL_1(lace_steal_loop, int*);
-VOID_TASK_DECL_2(lace_steal_loop_root, Task *, int*);
-
-#ifdef __cplusplus
-}
-#endif /* __cplusplus */
-
-#endif"
+@laceGenerateHeaderResultString@
